feat: add StickTopSong
